# art_gallery

./: CMakeLists.txt  README.md  Relazione.md
src/: main.cpp  rawmouse.hh  tappa01.cpp  tappa02.cpp  tappa03.cpp  tappa04.cpp  tappa05.cpp  tappa06.cpp  tappa07.cpp  tappa08.cpp  tappa09.cpp  tappa10.cpp  tappa11.cpp  tappa12.cpp
